force-app/main/default/objects/User_Provisioning_Setting__mdt/User_Provisioning_Setting__mdt.object-meta.xml
<CustomObject>
    <description>To Store the combinations of Business Function and Business Role with Profile, Role, Permission Set, Permission Set Group and Public Groups. This setting will be used in user trigger to automatically assign permissions.</description>
    <label>User Provisioning Setting</label>
    <pluralLabel>User Provisioning Settings</pluralLabel>
</CustomObject>