force-app/main/default/objects/User_Provisioning_Setting__mdt/fields/Call_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Name__c</fullName>
    <description>Textual call center name, for id lookup by trigger</description>
    <label>Call Center Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>