force-app/main/default/objects/User_Provisioning_Setting__mdt/fields/Permission_Set_Groups__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Groups__c</fullName>
    <description>Placeholder to store Salesforce permission set groups for each business functions</description>
    <inlineHelpText>Enter the API Name of Permission Set Group. Split permission set grups with Semi Colon If you are entering more than one Permission Set Group</inlineHelpText>
    <label>Permission Set Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>