force-app/main/default/objects/User_Provisioning_Setting__mdt/fields/Permission_Set_Licences__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Licences__c</fullName>
    <label>Permission Set Licences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>