force-app/main/default/objects/User_Provisioning_Setting__mdt/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <description>Placeholder to store Salesforce permission sets for each business functions</description>
    <inlineHelpText>Enter the API Name of Permission Set. Split permission sets with Semi Colon If you are entering more than one Permission Set.</inlineHelpText>
    <label>Permission Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>