force-app/main/default/objects/User_Provisioning_Setting__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>Placeholder to store Salesforce profile name</description>
    <label>Profile Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>