force-app/main/default/objects/User_Provisioning_Setting__mdt/fields/Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>Public_Groups__c</fullName>
    <description>Placeholder to store Salesforce public group for each business functions</description>
    <inlineHelpText>Enter the API Name of Public Group. Split Public Group with Semi Colon If you are entering more than one public group.</inlineHelpText>
    <label>Public Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>