force-app/main/default/objects/User_Provisioning_Setting__mdt/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>Placeholder to store Salesforce User Role Name</description>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>