force-app/main/default/objects/User_Provisioning_Setting__mdt/listViews/User_Provisioning_Settings.listView-meta.xml
<ListView>
    <fullName>User_Provisioning_Settings</fullName>
    <columns>DeveloperName</columns>
    <columns>Profile_Name__c</columns>
    <columns>Role_Name__c</columns>
    <columns>Call_Center_Name__c</columns>
    <columns>Permission_Sets__c</columns>
    <columns>Permission_Set_Licences__c</columns>
    <columns>Permission_Set_Groups__c</columns>
    <columns>Public_Groups__c</columns>
    <filterScope>Everything</filterScope>
    <label>User Provisioning Settings</label>
</ListView>